refactoring add/delete/view tags by user
